--- a/SolidPrinciples/pom.xml
+++ b/SolidPrinciples/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mucahitarslan</groupId>
-    <artifactId>ReflectionSamples</artifactId>
+    <artifactId>SolidPrinciples</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
